--- a/assets/customize/custom.css
+++ b/assets/customize/custom.css
@@ -43,7 +43,7 @@
 
 @media (max-width: 768px) {
     .content-header {
-        padding: 37px 15px 0 15px !important;
+        padding: 53px 15px 0 15px !important;
     }
 
     h1 {
@@ -53,7 +53,7 @@
 
 @media (max-width: 768px) {
     .user-panel {
-        padding: 33px 15px 0 15px !important;
+        padding: 48px 15px 0 15px !important;
     }
 }
 
@@ -203,3 +203,35 @@
 }
 
 /* end chart */
+
+/* Button floating */
+.float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 70px;
+    right: 50px;
+    background-color: #029937;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 3px #8a8686;
+}
+
+.float:hover {
+    background-color: #017740;
+}
+
+.btn-float {
+    margin-top: 22px;
+    color: #FFF;
+}
+
+@media (max-width: 768px) {
+    .float {
+        width: 60px !important;
+        height: 60px !important;
+        bottom: 20px !important;
+        right: 40px !important;
+    }
+}
